Fix div overflow

--- a/frontend/src/overview/spotlist/spot/Spot.scss
+++ b/frontend/src/overview/spotlist/spot/Spot.scss
@@ -51,8 +51,7 @@ summary::-webkit-details-marker {
 }
 
 .collapsibleContent {
-  margin-top: 20px;
-  margin-left: -30px;
+  margin: 20px 10px;
 
   @include small {
     display: none;
